page refresh error fixed

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,18 @@
     <title>
       LPU CSE Study Material, Projects and Roadmaps
     </title>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-JE5T07V0S3"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-JE5T07V0S3");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
